# nwws-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
deploy/: env.example  nwws.service
python-tests/: test_api.py
src/: api.rs  lib.rs  product.rs  runtime.rs  serve.rs  warning.rs
tests/: cli.rs  serve.rs
tools/: bench_pyiem_speed.py
